# albeorla-python

./: .gitignore  Justfile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-bridge.yml  publish-logging.yml
docs/: patterns-from-dusty.md
src/albeorla_logging/: __init__.py  logging_config.py
src/claude_cli_bridge/: __init__.py  bridge.py
