[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "albeorla-claude-cli-bridge"
version = "0.1.1"
description = "Async Python wrapper for the Claude Code CLI with session management"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "albeorla" }]
keywords = ["claude", "claude-code", "cli", "asyncio", "ai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = [
    "albeorla-logging>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/albeorla/albeorla-claude-cli-bridge"
Repository = "https://github.com/albeorla/albeorla-claude-cli-bridge"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_cli_bridge"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
