[project]
name = "albeorla-python-workspace"
version = "0.0.0"
description = "Workspace root (not published)"
requires-python = ">=3.10"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
albeorla-logging = { workspace = true }
albeorla-claude-cli-bridge = { workspace = true }

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
